Added  to partials

--- a/views/events.ejs
+++ b/views/events.ejs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!--import head, still need header and footer-->
+  <!--import head, still need header and footer--> 
+  <%- include('./partials/nav') %>
   <%- include('./partials/head') %>
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
   <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -26,6 +27,7 @@
   </div>
 </body>
 <footer>
+  <%- include('./partials/footer') %>
 <!--Put footer here-->
 </footer>
 </html>
