--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <%- include('./partials/nav') %>
     <head>
         <%- include('partials/head') %>
       </head>
@@ -8,4 +9,5 @@
 <body>
 <h1>Welcome to our landing page!</h1>
 </body>
+<%- include('./partials/footer') %>
 </html>
