--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,1 +1,9 @@
- 
+ <footer>
+<a href="https://twitter.com/?lang=en-za"><ion-icon name="logo-twitter"></ion-icon></a>
+<a href="https://www.instagram.com/"><ion-icon name="logo-instagram"></ion-icon></a>
+<a href=""><ion-icon name="mail"><b>comportal@gmail.com</b></ion-icon></a>
+<ion-icon name="call"><b>011 234 5678</b></ion-icon>
+    
+
+    <p><b>&copy;2025</b></p>
+ </footer>
