--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,13 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <%- include('./partials/nav') %>
-    <head>
-        <%- include('partials/head') %>
-      </head>
 </head>
-<body>
-<h1>Welcome to our landing page!</h1>
+
+<h1>WELCOME TO THE COMMUNITY PORTAL </h1>
+
+
+<body> 
+<p><b>An area for connection, collaboration, and exciting events!
+      Whether you are looking to engage with local initiatives, discover upcoming 
+      activities, or simply connect with like-minded individuals, you're in the right place.</b>
+      <b>Stay tuned for exciting updates and upcoming events, all created to bring
+      our community closer together. Let's make a difference—together as one!</b></p>
+
+   <!-- Card Placeholders-->
+   <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5">
+<div class="card card border border-success" style ="width:25%;" col-lg;>
+  <div class="card-body">
+    <img src="..." class="card-img-top" alt="...">
+ <h3>EVENT COMING SOON</h3>
+    <h5 class="card-title placeholder-glow">
+      <span class="placeholder col-6 bg-success"></span>
+    </h5>
+    <p class="card-text placeholder-glow">
+      <span class="placeholder col-7 bg-success"></span>
+      <span class="placeholder col-5 bg-success"></span> 
+    </p>
+    <a class="btn btn-primary disabled placeholder col-6" aria-disabled="true"></a>
+  </div>
+</div>
+<br><br>
+
+<div class="card card border border-success" style ="width:25%;"  >
+  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4"></div>
+ <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+  <h3>EVENT COMING SOON</h3>
+    <h5 class="card-title placeholder-glow"> 
+      <span class="placeholder col-6 bg-success"></span>
+    </h5>
+    <p class="card-text placeholder-glow">
+      <span class="placeholder col-7 bg-success"></span>
+      <span class="placeholder col-5 bg-success"></span> 
+    </p>
+    <a class="btn btn-primary disabled placeholder col-6" aria-disabled="true"></a>
+  </div>
+</div>
+<br><br>
+
+<div class="card card border border-success col-mid-4" style ="width:25%;" >
+  <img src="..." class="card-img-top" alt="...">
+ <h3>EVENT COMING SOON</h3>
+  <div class="card-body ">
+    <h5 class="card-title placeholder-glow">
+      <span class="placeholder col-6 bg-success"></span>
+    </h5>
+    <p class="card-text placeholder-glow">
+      <span class="placeholder col-7 bg-success"></span>
+      <span class="placeholder col-5 bg-success"></span>
+    </p>
+
+       <!--Button-->
+    <a class="btn btn-primary disabled placeholder col-6" aria-disabled="true"></a>
+  </div>
+</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
+
+
+
+<footer>
 <%- include('./partials/footer') %>
+</footer>
+
+
 </html>
