--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,10 +1,18 @@
 
-<nav>
-   <ul>
-       <li><a href="/">HOME</a></li>
-       <li><a href="/about">ABOUT</a></li>
-       <li><a href="/events">EVENTS</a></li>
-       <li><a href="/contact">CONTACT</a></li>
-       
-   </ul> 
+<link rel="stylesheet" href="/css/home.css">
+
+<nav> <ul class="nav justify-content-end">
+      <li>
+        <a class="nav-link"  href="/">HOME</a>
+      </li>
+      <li >
+        <a class="nav-link" href="/events">EVENTS</a>
+      </li>
+      <li>
+        <a class="nav-link" href="/about">ABOUT</a>
+      </li>
+      <li >
+        <a class="nav-link" href="/contact" >CONTACT</a>
+      </li>
+    </ul>
 </nav>
