--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,92 +3,80 @@
 <head>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+     <link rel="stylesheet" href="/css/home.css">
   <%- include('./partials/nav') %>
 </head>
 
-<h1>WELCOME TO THE COMMUNITY PORTAL </h1>
-
-
 <body> 
-<p><b>An area for connection, collaboration, and exciting events!
+
+  <h1>WELCOME TO THE COMMUNITY PORTAL </h1>
+
+<p class="intro">An area for connection, collaboration, and exciting events!
       Whether you are looking to engage with local initiatives, discover upcoming 
-      activities, or simply connect with like-minded individuals, you're in the right place.</b>
-      <b>Stay tuned for exciting updates and upcoming events, all created to bring
-      our community closer together. Let's make a difference—together as one!</b></p>
+      activities, or simply connect with like-minded individuals, you're in the right place.
+      Stay tuned for exciting updates and upcoming events, all created to bring
+      our community closer together. Let's make a difference—together as one!
+  </p> 
+  <br>
+  
 
-   <!-- Card Placeholders-->
-   <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5">
-<div class="card card border border-success" style ="width:25%;" col-lg;>
-  <div class="card-body">
-    <img src="..." class="card-img-top" alt="...">
- <h3>EVENT COMING SOON</h3>
-    <h5 class="card-title placeholder-glow">
-      <span class="placeholder col-6 bg-success"></span>
-    </h5>
-    <p class="card-text placeholder-glow">
-      <span class="placeholder col-7 bg-success"></span>
-      <span class="placeholder col-5 bg-success"></span> 
-    </p>
-    <a class="btn btn-primary disabled placeholder col-6" aria-disabled="true"></a>
-  </div>
-</div>
+  <!-- Card Placeholders-->
+ <div class="container"> 
+   <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3">
+     <div class="col">
+      <div class="card" >
+       <div class="card-body">
+        <h3 class="text-center mb-4">EVENT COMING SOON</h3>
+         <span class="placeholder col-6 bg-success"></span>
+          <p class="card-text placeholder-glow">
+            <span class="placeholder col-7 bg-success"></span>
+              <span class="placeholder col-7 bg-success"></span> 
+              <br>
+              <br> 
+               <a class="btn btn-success disabled placeholder col-6" aria-disabled="true"></a>
+       </div>
+      </div>
+    </div>
+   </div>
 <br><br>
 
-<div class="card card border border-success" style ="width:25%;"  >
-  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4"></div>
- <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-  <h3>EVENT COMING SOON</h3>
-    <h5 class="card-title placeholder-glow"> 
-      <span class="placeholder col-6 bg-success"></span>
-    </h5>
-    <p class="card-text placeholder-glow">
-      <span class="placeholder col-7 bg-success"></span>
-      <span class="placeholder col-5 bg-success"></span> 
-    </p>
-    <a class="btn btn-primary disabled placeholder col-6" aria-disabled="true"></a>
-  </div>
-</div>
+<div class="col">
+     <div class="card" >
+       <div class="card-body">
+        <h3 class="text-center mb-4">EVENT COMING SOON</h3>
+         <span class="placeholder col-6 bg-success"></span>
+          <p class="card-text placeholder-glow">
+            <span class="placeholder col-7 bg-success"></span>
+              <span class="placeholder col-7 bg-success"></span> 
+              <br>
+              <br> 
+               <a class="btn btn-success disabled placeholder col-6" aria-disabled="true"></a>
+       </div>
+     </div>
+   </div>
 <br><br>
 
-<div class="card card border border-success col-mid-4" style ="width:25%;" >
-  <img src="..." class="card-img-top" alt="...">
- <h3>EVENT COMING SOON</h3>
-  <div class="card-body ">
-    <h5 class="card-title placeholder-glow">
-      <span class="placeholder col-6 bg-success"></span>
-    </h5>
-    <p class="card-text placeholder-glow">
-      <span class="placeholder col-7 bg-success"></span>
-      <span class="placeholder col-5 bg-success"></span>
-    </p>
 
-       <!--Button-->
-    <a class="btn btn-primary disabled placeholder col-6" aria-disabled="true"></a>
-  </div>
-</div>
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
+<div class="col">
+     <div class="card" >
+       <div class="card-body">
+        <h3 class="text-center mb-4">EVENT COMING SOON</h3>
+         <span class="placeholder col-6 bg-success"></span>
+          <p class="card-text placeholder-glow">
+            <span class="placeholder col-7 bg-success"></span>
+              <span class="placeholder col-7 bg-success"></span>
+              <br>
+              <br> 
+               <a class="btn btn-success disabled placeholder col-6" aria-disabled="true"></a>
+       </div>
+     </div>
+   </div>
+ </div>
+ </body>
 
 </body>
+<footer><%- include('./partials/footer') %></footer>
 
-
-
-<footer>
-<%- include('./partials/footer') %>
-</footer>
 
 
 </html>
