--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 
 
-
+<link rel="stylesheet" href="/css/home.css">
 
      <footer class="footer">
     <ul class="social-icon">
@@ -15,8 +15,8 @@
           <ion-icon name="logo-instagram"></ion-icon>
         </a></li>
     </ul>
-    
-    <p><b>&copy; 2025  | All Rights Reserved</b></p>
+     <p><b>&copy; 2025  | All Rights Reserved</b></p>
   </footer>
+  
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
