Added header and footer to each page except Thank You (not required there).

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -3,8 +3,11 @@
   <head>
     <%- include('partials/head') %>
   </head>
+  <header><%- include('./partials/nav') %></header>
   <body>
+    <%- include('./partials/nav') %>
     <h1>Oops! The page you are looking for does not exist.</h1>
     <a href="/">Back to Home</a>
   </body>
+  <footer><%- include('./partials/footer') %></footer>
 </html>
