--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <head>
-        <%- include('partials/head') %>
-      </head>
-</head>
-<body>
-<h1>About Us</h1>
-</body>
-<%- include('./partials/footer') %>
+      <%- include('partials/head') %>
+    </head>
+  </head>
+  <header><%- include('./partials/nav') %></header>
+  <body>
+    <h1>About Us</h1>
+  </body>
+  <footer><%- include('./partials/footer') %></footer>
 </html>
