--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
   <head>
-    <%- include('partials/head') %>
+    <head>
+      <%- include('partials/head') %>
+    </head>
   </head>
-</head>
-<body>
-<h1>Contact Us</h1>
-<form action="/contact" method="POST">
-  <input type="text" name="name" placeholder="Name" required>
-  <input type="email" name="email" placeholder="Email" required>
-  <textarea name="message" placeholder="Your message" required></textarea>
-  <button type="submit">Send</button>
-</form>
-</body>
-<footer>
-  <%- include('./partials/footer') %>
-
-</footer>
+  <header><%- include('./partials/nav') %></header>
+  <body>
+    <h1>Contact Us</h1>
+    <form action="/contact" method="POST">
+      <input type="text" name="name" placeholder="Name" required />
+      <input type="email" name="email" placeholder="Email" required />
+      <textarea name="message" placeholder="Your message" required></textarea>
+      <button type="submit">Send</button>
+    </form>
+  </body>
+  <footer><%- include('./partials/footer') %></footer>
 </html>
