--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-     <link rel="stylesheet" href="/css/home.css">
-  <%- include('./partials/nav') %>
+  <link rel="stylesheet" href="/css/home.css">
 </head>
-
+<header><%- include('./partials/nav') %></header>
 <body> 
-
   <h1>WELCOME TO THE COMMUNITY PORTAL </h1>
 
 <p class="intro">An area for connection, collaboration, and exciting events!
@@ -18,7 +15,6 @@
       our community closer together. Let's make a difference—together as one!
   </p> 
   <br>
-  
 
   <!-- Card Placeholders-->
  <div class="container"> 
@@ -76,7 +72,4 @@
 
 </body>
 <footer><%- include('./partials/footer') %></footer>
-
-
-
 </html>
