--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,7 +1,8 @@
-
+/*Heading Aligning*/
 h1{
   text-align: center;
 }
+/*Styling welcome message*/
 .intro{
   text-align: center;
  margin: 0 auto;
@@ -9,55 +10,51 @@ h1{
   color: black;
 
 }
+/*Styling body*/
   body {
     font-family: 'Roboto', sans-serif;
     background: url('https://www.transparenttextures.com/patterns/cubes.png'), linear-gradient(135deg, #e6f3e6, #b8e0b8);
     min-height: 100vh;
     padding: 20px;
   }
- .container {
-  display: flex;
-  flex-direction: row; /* Stacks the flex items vertically */
-  gap: 45px; /* Adds space between the vertical items */
+ 
+/*Creating card form*/
+.cardh{
+  border: 2px solid white;
+  border-radius: 8px;
+  padding: 15px;
+  margin-bottom: 25px;
+  background-color: white;
+ 
 }
 
-
-.card{
-  width: 300px;
-  height: 295px;
-  border: 1px solid #ccc;
-  margin-bottom: 10px; /* Another way to add vertical space */
-}
-
-
-
+/*Arranging the nav bar*/
 nav{
-  background-color: green;
+  background-color: limegreen;
   padding: 3%;
-  color: white;
 }
+/*Arranging the links to other pages*/
 .nav-link{
   color: white;
   display: inline;
   font-size: larger;
 }
-
+/*Creating a hover effect for the links*/
 .nav-link:hover {
   color: white;
   background-color: rgb(96, 231, 96); /* Light background effect */
   transition: all 0.3s ease-in-out; /* Smooth transition */
 }
-
+/*Arranging footer*/
 .footer {
   position: relative;
-  background: green;
-   padding: 15px;
-   text-align: center !important;
-   color: white;
-  
+  background: limegreen;
+  padding: 15px;
+  text-align: center !important;
+  color: white;
 
 }
-
+/*Arranging icons*/
 .footer a {
   
   font-size: 30px;
@@ -67,11 +64,11 @@ nav{
   transition: 0.5s;
   align-items: center;
 }
-
+/*Hover effect for the icons*/
 .footer a:hover {
   transform: translateY(-10px);
 }
-
+/*Styling the icons*/
 .social-icon__item {
   list-style: none;
   display: inline;
