--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,8 +4,8 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
      <link rel="stylesheet" href="/css/home.css">
-  <%- include('./partials/nav') %>
 </head>
+<header>  <%- include('./partials/nav') %></header>
 
 <body> 
 
@@ -22,59 +22,55 @@
 
   <!-- Card Placeholders-->
  <div class="container"> 
-   <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3">
-     <div class="col">
-      <div class="card" >
-       <div class="card-body">
-        <h3 class="text-center mb-4">EVENT COMING SOON</h3>
-         <span class="placeholder col-6 bg-success"></span>
-          <p class="card-text placeholder-glow">
-            <span class="placeholder col-7 bg-success"></span>
-              <span class="placeholder col-7 bg-success"></span> 
-              <br>
-              <br> 
-               <a class="btn btn-success disabled placeholder col-6" aria-disabled="true"></a>
-       </div>
+   <div class="row g-3">
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="cardh" >
+         <div class="card-body">
+            <h3 class="text-center mb-4">EVENT COMING SOON</h3>
+             <span class="placeholder col-6 bg-success"></span>
+               <p class="card-text placeholder-glow">
+                 <span class="placeholder col-7 bg-success"></span>
+                  <span class="placeholder col-7 bg-success"></span> 
+               </p>
+                <a class="btn btn-success disabled placeholder col-6" aria-disabled="true"></a>
+          </div>
+        </div>
       </div>
-    </div>
-   </div>
-<br><br>
+       
 
-<div class="col">
-     <div class="card" >
-       <div class="card-body">
-        <h3 class="text-center mb-4">EVENT COMING SOON</h3>
-         <span class="placeholder col-6 bg-success"></span>
-          <p class="card-text placeholder-glow">
-            <span class="placeholder col-7 bg-success"></span>
-              <span class="placeholder col-7 bg-success"></span> 
-              <br>
-              <br> 
-               <a class="btn btn-success disabled placeholder col-6" aria-disabled="true"></a>
-       </div>
+
+  <div class="col-12 col-md-6 col-lg-4">
+        <div class="cardh" >
+         <div class="card-body">
+            <h3 class="text-center mb-4">EVENT COMING SOON</h3>
+            <span class="placeholder col-6 bg-success"></span>
+               <p class="card-text placeholder-glow">
+                 <span class="placeholder col-7 bg-success"></span>
+                  <span class="placeholder col-7 bg-success"></span> 
+               </p>
+                <a class="btn btn-success disabled placeholder col-6" aria-disabled="true"></a>
+          </div>
+        </div>
      </div>
-   </div>
-<br><br>
-
-
-<div class="col">
-     <div class="card" >
-       <div class="card-body">
-        <h3 class="text-center mb-4">EVENT COMING SOON</h3>
-         <span class="placeholder col-6 bg-success"></span>
-          <p class="card-text placeholder-glow">
-            <span class="placeholder col-7 bg-success"></span>
-              <span class="placeholder col-7 bg-success"></span>
-              <br>
-              <br> 
-               <a class="btn btn-success disabled placeholder col-6" aria-disabled="true"></a>
-       </div>
+  
+    <div class="col-12 col-md-6 col-lg-4">
+        <div class="cardh" >
+         <div class="card-body">
+            <h3 class="text-center mb-4">EVENT COMING SOON</h3>
+            <span class="placeholder col-6 bg-success"></span>
+               <p class="card-text placeholder-glow">
+                 <span class="placeholder col-7 bg-success"></span>
+                  <span class="placeholder col-7 bg-success"></span> 
+               </p>
+                <a class="btn btn-success disabled placeholder col-6" aria-disabled="true"></a>
+          </div>
+        </div>
      </div>
-   </div>
+
+  </div>
  </div>
  </body>
 
-</body>
 <footer><%- include('./partials/footer') %></footer>
 
 
