--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,21 +1,13 @@
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title><%= title %></title>
-<link rel="stylesheet" href="/css/<%= pageName %>.css">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-<body>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
+<link rel="stylesheet" href="/css/<%= pageName %>.css" />
+<% if (typeof jsExists !== 'undefined' && jsExists) { %>
+<script src="/js/<%= pageName %>.js" defer></script>
+<% } %>
+<link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+  integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+  crossorigin="anonymous"
+/>
