--- a/views/thank_you.ejs
+++ b/views/thank_you.ejs
@@ -2,10 +2,38 @@
 <html lang="en">
   <head>
     <head>
+      <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css" />
       <%- include('partials/head') %>
     </head>
   </head>
   <body>
-    <h1>Thank you for contacting us</h1>
+    <div
+      class="container text-center bg-white p-5 rounded shadow my-5"
+      style="max-width: 600px"
+    >
+      <h1 id="title" class="mb-4"><%= title %></h1>
+
+      <p class="mb-4">
+        We received your message and will review it as soon as possible. You
+        have submitted the following:
+      </p>
+      <ul class="list-group mb-4 text-start">
+        <li id="name" class="list-group-item" tabindex="0">
+          <strong>Name:</strong> <%= name %>
+        </li>
+        <li id="email" class="list-group-item" tabindex="0">
+          <strong>Email:</strong> <%= email %>
+        </li>
+        <li id="message" class="list-group-item" tabindex="0">
+          <strong>Message:</strong> <%= message %>
+        </li>
+      </ul>
+
+      <a href="/" id="homeButton" class="btn btn-primary" tabindex="0"
+        >Go Home</a
+      >
+    </div>
+
+    <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
