--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,13 +10,16 @@
 <body> 
   <h1>WELCOME TO THE COMMUNITY PORTAL </h1>
 
-<p class="intro">An area for connection, collaboration, and exciting events!
+<p class="intro">
+  
+      An area for connection, collaboration, and exciting events!
       Whether you are looking to engage with local initiatives, discover upcoming 
       activities, or simply connect with like-minded individuals, you're in the right place.
       Stay tuned for exciting updates and upcoming events, all created to bring
       our community closer together. Let's make a difference—together as one!
-  </p> 
-  <br>
+</p> 
+<br>
+  
 
   <!-- Card Placeholders-->
  <div class="container"> 
@@ -67,6 +70,7 @@
 
   </div>
  </div>
+
  </body>
 
 <footer><%- include('./partials/footer') %></footer>
