--- a/public/css/thank_you.css
+++ b/public/css/thank_you.css
@@ -3,20 +3,20 @@ html body {
     linear-gradient(135deg, #e6f3e6, #b8e0b8);
   height: 100vh;
 }
-
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 body .btn-primary {
   background-color: green;
   border-color: lightgreen;
-  font-family: "Times New Roman", Times, serif;
+  font-family: "Roboto", sans-serif;
 }
 
 body .btn-primary:hover {
   background-color: darkgreen;
   border-color: green;
-  font-family: "Times New Roman", Times, serif;
+  font-family: "Roboto", sans-serif;
 }
 
 #title {
   color: green;
-  font-family: "Times New Roman", Times, serif;
+  font-family: "Roboto", sans-serif;
 }
