--- a/views/about.ejs
+++ b/views/about.ejs
@@ -11,7 +11,7 @@
 <h1>About Us</h1>
    <div class="container my-5">
     <h1 class="text-center mb-4">Team Information</h1>
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 justify-content-center">
       <% information.forEach(member => { %>
         <div class="col">
           <div class="card h-100 shadow-sm">
