Cleaned up code. Use prettier code formatter as well

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,18 +1,18 @@
+<link rel="stylesheet" href="/css/home.css" />
 
-<link rel="stylesheet" href="/css/home.css">
-
-<nav> <ul class="nav justify-content-end">
-      <li>
-        <a class="nav-link"  href="/">HOME</a>
-      </li>
-      <li >
-        <a class="nav-link" href="/events">EVENTS</a>
-      </li>
-      <li>
-        <a class="nav-link" href="/about">ABOUT</a>
-      </li>
-      <li >
-        <a class="nav-link" href="/contact" >CONTACT</a>
-      </li>
-    </ul>
+<nav>
+  <ul class="nav justify-content-end">
+    <li>
+      <a class="nav-link" href="/">HOME</a>
+    </li>
+    <li>
+      <a class="nav-link" href="/events">EVENTS</a>
+    </li>
+    <li>
+      <a class="nav-link" href="/about">ABOUT</a>
+    </li>
+    <li>
+      <a class="nav-link" href="/contact">CONTACT</a>
+    </li>
+  </ul>
 </nav>
