--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-
-    <%- include('./partials/nav') %>
-    <%- include('./partials/head') %>
-  <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
-  <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>  
-</head>
-<body>
-<h1>About Us</h1>
-   <div class="container my-5">
-    <h1 class="text-center mb-4">Team Information</h1>
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 justify-content-center">
-      <% information.forEach(member => { %>
+  <head>
+    <%- include('./partials/nav') %> <%- include('./partials/head') %>
+    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css" />
+    <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
+  </head>
+  <body>
+    <h1>About Us</h1>
+    <div class="container my-5">
+      <h1 class="text-center mb-4">Team Information</h1>
+      <div
+        class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 justify-content-center"
+      >
+        <% information.forEach(member => { %>
         <div class="col">
           <div class="card h-100 shadow-sm">
             <div class="card-body">
@@ -22,11 +22,9 @@
             </div>
           </div>
         </div>
-      <% }) %>
+        <% }) %>
+      </div>
     </div>
-  </div>
-</body>
-<footer>
-  <%- include('./partials/footer') %>
-</footer>
+  </body>
+  <footer><%- include('./partials/footer') %></footer>
 </html>
